--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,32 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
+
 /* .movie-container {
   margin: 100px;
 } */
+/* html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+#container {
+  min-height: 100%;
+  position: relative;
+}
+#header {
+  background: #ff0;
+  padding: 10px;
+}
+#body {
+  padding: 10px;
+  padding-bottom: 60px; /* Height of the footer */
+/* } */
+/* #footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Height of the footer */
+/* background: #6cf; */
+/* }  */
