--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,54 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 
+html,
 body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
+
+/* html,
+body {
+  margin: 0;
+  height: 100%;
+}
+body {
+  box-sizing: border-box;
+  border: solid red 5px;
+  border-radius: 2em;
+  font-family: "Roboto", sans-serif;
+} */
+
+/* * {
+  box-sizing: border-box;
+}
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  position: relative;
+  font-family: "Roboto", sans-serif;
+}
+.main-container { */
+/* min-height: 100vh; /* will cover the 100% of viewport */
+/* overflow: hidden;
+  display: block;
+  position: relative; */
+/* padding-bottom: 100px; height of your footer */
+/* }  */
+/* footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+} */
+
+/* footer {
+  display: table-row;
+  height: 0;
+} */
 
 /* .movie-container {
   margin: 100px;
